<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00555555"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guess the meaning"
            android:textSize="35sp"
            android:fontFamily="@font/balthazar"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#00555555"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:text="1. Congruous"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <RadioGroup
                android:id="@+id/radioGroupOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="Corresponding or agreeing"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="impracticable"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="An amount that is extra"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#00555555 "
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:text="2. Versatile"
                android:textColor="@color/black"
                android:textSize="16sp" />



            <RadioGroup
                android:id="@+id/radioGroupTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/RadioButtonQuestionTwoOptionOne"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/RadioButtonQuestionTwoOptionTwo"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/RadioButtonQuestionTwoOptionThree"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00555555"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:text="3. Preface"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <RadioGroup
                android:id="@+id/radioGroupThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionThreeOptionOne"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionThreeOptionTwo"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionThreeOptionThree"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#00555555"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:text="4. Conceal"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <RadioGroup
                android:id="@+id/radioGroupFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionFourOptionOne"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/RadioButtonQuestionFourOptionTwo"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/RadioButtonQuestionFourOptionThree"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#00555555"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:text="5. Lambaste"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <RadioGroup
                android:id="@+id/radioGroupFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/RadioButtonQuestionFiveOptionOne"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerFive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/RadioButtonQuestionFiveOptionTwo"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/RadioButtonQuestionFiveOptionThree"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:onClick="SubmitResponse"
                android:layout_margin="20dp"
                android:textColor="@android:color/white"
                android:background="@color/black"
                android:text="Submit" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>