<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="#656262"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="GRE Master"
            app:titleMarginStart="30dp"
            />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/quiz"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/voc"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:onClick="quizButtonClicked"
            android:fontFamily="@font/balthazar"
            android:backgroundTint="#615454"/>

        <TextView
            android:id="@+id/textViewF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/forum"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/forumButton"
            android:src="@drawable/forum"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:onClick="goToForum"
            android:backgroundTint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="GRE FORUM"
            android:textSize="20sp"
            android:fontFamily="@font/balthazar"
            android:textStyle="bold"
            android:textColor="@color/black"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:gravity="center">

            <Button
                android:id="@+id/learnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Learn"
                android:textSize="15sp"
                android:layout_marginEnd="30dp"/>
            <Button
                android:id="@+id/recourceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="Resources"
                android:layout_marginStart="30dp"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navView"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_logout"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>